# brahe

./: .buildinfo  .codecov.yml  .coverage  .coveragerc  .gitignore  .pre-commit-config.yaml  .travis.yml  404.html  AGENTS.md  CHANGELOG.md  CLAUDE.md  CNAME  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  LICENSE  LICENSE.md  MANIFEST.in  Makefile  README.md  contributing.html  deny.toml  dev_requirements.txt  examples.html  genindex.html  index.html  installation.html  justfile  keplerian_propagator_old.rs  make.py  mkdocs.yaml  modules.html  objects.inv  properdocs.yml  py-modindex.html  pyproject.toml  pytest.ini  requirements.txt  search.html  searchindex.js  (+5 more)
.cargo/: config.toml
.doctrees/: environment.pickle  examples.doctree  index.doctree  modules.doctree
.github/: FUNDING.yml  brahe-data-manifest.txt  dependabot.yml  pull_request_template.md
_sources/: examples.rst.txt  index.rst.txt
about/: contact.html  contributing.html  design_decisions.html  index.html  license.html  python_deprecation.html  roadmap.html
benchmarks/: gravity_benchmarks.rs  propagator_benchmarks.rs  provider_benchmarks.rs  spice_benchmarks.rs
benchmarks/comparative/implementations/nyx/: Cargo.toml  build.rs
benchmarks/comparative/implementations/nyx/src/: attitude.rs  coordinates.rs  data.rs  force_model.rs  frames.rs  main.rs  orbits.rs  propagation.rs  time_bench.rs
benchmarks/comparative/implementations/rust/: Cargo.toml
benchmarks/comparative/implementations/rust/src/: access.rs  attitude.rs  coordinates.rs  force_model.rs  frames.rs  main.rs  orbits.rs  propagation.rs  time_bench.rs
benchmarks/gpu_comparison/implementations/rust/: Cargo.toml
benchmarks/gpu_comparison/implementations/rust/src/: main.rs  tasks_coordinates.rs  tasks_force_model.rs  tasks_frames.rs  tasks_propagation.rs  tasks_time.rs
brahe/: __about__.py  __init__.py  _brahe.pyi  access.py  astro.py  astrodynamics.py  attitude.py  brahe.pyi  ccsds.py  celestrak.py  constants.py  coordinates.py  data.py  datasets.py  earthmodels.py  eop.py  ephemerides.py  epoch.py  estimation.py  events.py  frames.py  integrators.py  logging.py  math.py  monte_carlo.py  orbit_dynamics.py  orbits.py  propagators.py  reference_frames.py  relative_coordinates.py  relative_motion.py  relorbits.py  space_weather.py  spacetrack.py  spice.py  time.py  tle.py  trajectories.py  utils.py
crates/brahe-py/: Cargo.toml
crates/brahe-py/src/: access.rs  attitude.rs  ccsds.rs  celestrak.rs  coordinates.rs  datasets.rs  earth_models.rs  eop.rs  estimation.rs  frames.rs  horizons.rs  icgem.rs  integrators.rs  lib.rs  math.rs  orbit_dynamics.rs  orbits.rs  propagators.rs  py_gcat.rs  py_star_catalog.rs  py_star_catalogs.rs  sbdb.rs  spacetrack.rs  spice.rs  time.rs  trajectories.rs  utils.rs
crates/brahe-wasm/: .gitignore  Cargo.toml  README.md  package-lock.json  package.json  tsconfig.json  typedoc.json  vitest.config.ts
crates/brahe-wasm/js/: constants.ts  index.ts
crates/brahe-wasm/src/: constants.rs  lib.rs
crates/brahe-wasm/tests/: constants.test.ts
data/: finals.all.iau2000.txt  fluxtable.txt  sw19571001.txt
doc/: Makefile
docs/: brahe_mcp.md  changelog.md  code_of_conduct.md  contributing.md  design.md  development_guide.md  development_guidelines.md  glossary.md  index.md  installation.md  license.md  mkdocs.yaml  requirements.txt  roadmap.md
examples/: TEMPLATE.py  TEMPLATE.rs  ci_only.py  ci_only.rs  computing_doppler_shift_for_pass.html  computing_ground_contacts.html  contact_prediction.html  index.html  orbit_prediction.html  propagating_an_orbit.html  test_ignore.py  test_ignore.rs  test_network.py  test_network.rs  test_network_late_flag.py  test_network_late_flag.rs  tle_download.html
getting_started/: contact_prediction.html  first_script.html  frame_conversion.html  index.html  installation.html  orbit_prediction.html  tle_download.html
joss/: paper.bib  paper.md
latest/: 404.html  brahe_mcp.html  changelog.html  code_of_conduct.html  contributing.html  design.html  development_guide.html  development_guidelines.html  glossary.html  index.html  installation.html  license.html  objects.inv  roadmap.html  sitemap.xml  versioning.html
learn/: attitude_representation.html  constants.html  coordinate_transformations.html  frame_transformations.html  index.html  orbital_properties.html  time.html
lib/: Cargo.toml
lib/data/: finals.all.iau2000.txt  fluxtable.txt  sw19571001.txt
lib/src/: frames.rs  lib.rs
lib/src/constants/: math.rs  mod.rs  physical.rs  time.rs
lib/src/coordinates/: cartesian.rs  geocentric.rs  geodetic.rs  mod.rs  topocentric.rs  types.rs
lib/src/eop/: c04_parser.rs  eop_provider.rs  file_provider.rs  global.rs  mod.rs  standard_parser.rs  static_provider.rs  types.rs
lib/src/orbits/: keplerian.rs  mod.rs
lib/src/time/: conversions.rs  duration.rs  epoch.rs  mod.rs  time_series.rs  types.rs
lib/src/utils/: errors.rs  math.rs  mod.rs
library_api/: attitude.html  constants.html  coordinates.html  eop.html  frames.html  index.html  time.html  trajectories.html
modules/: astro.html  attitude.html  constants.html  coordinates.html  data.html  eop.html  epoch.html  frames.html  relative_coordiantes.html  time.html
news/: .template.md  102.added.md  104.added.md  106.changed.md  109.added.md  109.changed.md  109.fixed.md  113.added.md  113.changed.md  122.changed.md  124.added.md  126.added.md  126.changed.md  129.fixed.md  131.fixed.md  137.changed.md  139.changed.md  14.changed.md  143.fixed.md  147.fixed.md  150.added.md  150.changed.md  152.added.md  152.fixed.md  157.added.md  157.changed.md  157.fixed.md  159.fixed.md  16.changed.md  16.fixed.md  165.changed.md  167.added.md  167.changed.md  167.fixed.md  169.fixed.md  179.changed.md  179.fixed.md  181.added.md  181.changed.md  188.fixed.md  (+86 more)
plots/: TEMPLATE_plot.py  brahe_theme.py  fig_access_benchmark.py  fig_anomaly_eccentric_mean.py  fig_anomaly_true_eccentric.py  fig_anomaly_true_mean.py  fig_comparative_benchmarks.py  fig_f107_history.py  (+8 more)
profiles/rust/: Cargo.toml
profiles/rust/src/: common.rs  lib.rs
(+12879 files in other folders)
