[workspace]
members = ["crates/brahe-py"]

# Single source of truth for the release version. Workspace members inherit via
# `version.workspace = true` so `brahe-py` (the Python extension) stays in sync
# with the root `brahe` crate.
[workspace.package]
version = "1.7.0"

[package]
name = "brahe"
version.workspace = true
authors = ["Duncan Eddy <duncan.eddy@gmail.com>"]
edition = "2024"
description = "Brahe is a modern satellite dynamics library for research and engineering applications designed to be easy-to-learn, high-performance, and quick-to-deploy. The north-star of the development is enabling users to solve meaningful problems and answer questions quickly, easily, and correctly."
homepage = "https://docs.brahe.space/"
documentation = "https://docs.rs/brahe/"
repository = "https://github.com/duncaneddy/brahe/"
keywords = ["space", "astrodynamics", "satellite"]
categories = ["science"]
readme = "README.md"
license = "MIT"
exclude = [# We need to keep the size down for crates.io these don't need to be included
    "/test_data",
    "/tests",
    "/scripts",
    "/docs",
    "/brahe",
    "/crates",
    ".github",
    "/examples",
    "/plots",
    "/test_assets",
    "/data/textures/world.topo.200410.3x5400x2700.png", # Python-only
    "justfile",
    "properdocs.yml",
    "uv.lock"
]

[lib]
name = "brahe"

[dependencies]
rsofa = "0.5"
nalgebra = { version = ">=0.34, <0.36", features = ["serde-serialize"] }
numpy = { version = "0.29", optional = true }
once_cell = "1.21"
num-traits = "0.2"
regex = "1"
is_close = "0.1"
ureq = { version = "3", features = ["cookies", "multipart"] }
# `time` is pulled in transitively by ureq's `cookies` feature (ureq -> cookie_store
# -> cookie). time 0.3.52 made a breaking change to `Parsable::parse` that cookie
# 0.18.1 (the latest release) does not compile against. Because Cargo.lock is not
# committed for the library, CI resolves fresh and otherwise picks up the broken 0.3.52. Cap below
# it until a fixed cookie release is available.
# TODO: Remove this pin once fix is released
time = ">=0.3, <0.3.52"
strum = "0.28"
strum_macros = "0.28"
scraper = "0.27"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
base64 = "0.22"
sha2 = "0.11"
quick-xml = { version = "0.41", features = ["serialize"] }
sgp4 = "2.4"
uuid = { version = "1.24.0", features = ["v4", "v7", "serde"] }
rayon = "1.12"
num_cpus = "1.17"
dirs = "6"
polars = { version = "0.54", default-features = false, features = ["lazy"] }
lru = "0.18.1"
rand = "0.9"
# Pinned to the rand-0.9-compatible line. rand_distr 0.6 requires rand 0.10,
# but polars and rv (transitive) hold the tree on rand 0.9 / rand_distr 0.5, so
# bumping would duplicate both crates and drop `StdRng: Clone` (which
# SimpleSSNSensor relies on). Dependabot is configured to ignore rand_distr for
# the same reason; revisit once polars and rv adopt rand 0.10.
rand_distr = "0.5"

# pyo3 is an optional dependency used only by the `python` feature, which enables
# the `python_interop` module holding the `BraheError` PyErr conversion. The
# extension module itself is built from the `brahe-py` workspace crate.
[dependencies.pyo3]
version = "0.29"
optional = true

[dev-dependencies]
dhat = "0.3"
approx = "0.5"
rstest = "0.26"
serial_test = "3"
httpmock = "0.8"
tempfile = "3"
cargo-deny = "0.20"
mockall = "0.15"
rv = "0.19"
rand = "0.9"
criterion = { version = "0.8", features = ["html_reports"] }
# default-features disabled to drop anise's `analysis` feature, which pulls in
# `hyperdual`. hyperdual pins an exact nalgebra version, so enabling it forces
# brahe's nalgebra to match anise's (and broke the build when hyperdual 1.5.0
# moved to nalgebra 0.35 while anise stayed on 0.34). brahe only uses anise's
# core ephemeris APIs, which need no features.
# Validation oracle for the native SPICE implementation (tests + benchmarks only).
anise = { version = "0.10", default-features = false }

[features]
integration = []
manual = []  # For tests requiring network downloads (run with: cargo test --features manual)
python = ["dep:pyo3", "dep:numpy"]
dhat-heap = []    # if you are doing heap profiling
dhat-ad-hoc = []  # if you are doing ad hoc profiling

# Build Profiles
[profile.dev]
opt-level = 0
lto = "off"

[profile.release]
opt-level = 3
codegen-units = 1
lto = "fat"

[profile.profiling]
inherits = "release"
debug = 1

# Benchmark Profiles
[profile.bench]
opt-level = 3
lto = "thin"

[[bench]]
name = "provider_benchmarks"
path = "benchmarks/provider_benchmarks.rs"
harness = false

[[bench]]
name = "propagator_benchmarks"
path = "benchmarks/propagator_benchmarks.rs"
harness = false

[[bench]]
name = "gravity_benchmarks"
path = "benchmarks/gravity_benchmarks.rs"
harness = false

[[bench]]
name = "spice_benchmarks"
path = "benchmarks/spice_benchmarks.rs"
harness = false

[lints.rust]
missing_docs = "warn"
unexpected_cfgs = { level = "warn", check-cfg = ['cfg(coverage,coverage_nightly)', 'cfg(feature, values("manual"))'] }
