[project]
name = "brahe"
dynamic = ["version"]
description = "Brahe is a modern satellite dynamics library for research and engineering applications designed to be easy-to-learn, high-performance, and quick-to-deploy. The north-star of the development is enabling users to solve meaningful problems and answer questions quickly, easily, and correctly."
readme = { file = "README.md", content-type = "text/markdown" }
requires-python = ">=3.10"
license = { file = "LICENSE.md" }
keywords = ["space", "astrodynamics", "satellite", "research"]
authors = [
    { name = "Duncan Eddy", email = "duncan.eddy@gmail.com" }
]
maintainers = [
    { name = "Duncan Eddy", email = "duncan.eddy@gmail.com" }
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Operating System :: Microsoft :: Windows",
    "Operating System :: MacOS :: MacOS X",
    "Operating System :: POSIX :: Linux",
    # Specify the Python versions you support here.
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
]
dependencies = [
    "numpy>=1.0.0",
    "rich>=14.0.0",
    "typer>=0.16.0",
    "polars>=1.0.0",
    "loguru>=0.7.0",
    "typing_extensions>=4.0.0",
]

[project.urls]
Documentation = "https://duncaneddy.github.io/brahe/"
Repository = "https://github.com/duncaneddy/brahe"
Issues = "https://github.com/duncaneddy/brahe/pulls"

[project.optional-dependencies]
plots = [
    "matplotlib>=3.9.4",
    "plotly>=6.0.0",
    "cartopy>=0.23.0",
    "shapely>=2.0.0",
    "pillow>=10.0.0",
    "httpx>=0.27.0",
    "kaleido>=1.0.0",
    "pyshp>=2.3.0",
    "scienceplots>=2.0.0",
]
gpu-comparison = [
    "psutil>=5.9",
]
all = [
      "brahe[plots]",
]

[project.scripts]
brahe = "brahe.cli.__main__:main"

[build-system]
requires = ["maturin>=1.0,<2.0"]
build-backend = "maturin"

[dependency-groups]
test = [
    "pytest>=7.4.4",
    "pytest-cov>=3.0.0",
    "pytest-order>=1.3.0",
    "pytest-rerunfailures>=14.0",
    "coverage>=7.0.0",
]
docs = [
    "mkdocs<2.0.0",
    "properdocs",
    "mike>=2.0.0",
    "mkdocs-awesome-nav>=3.2.0",
    "mkdocs-git-revision-date-localized-plugin>=1.4.7",
    "mkdocs-material>=9.6.20",
    "mkdocs-minify-plugin>=0.8.0",
    "mkdocs-section-index>=0.3.10",
    "mkdocs-table-reader-plugin>=3.1.0",
    "mkdocstrings>=0.30.0",
    "mkdocstrings-python>=1.18.2",
    "neoteroi-mkdocs>=1.1.3",
    "pyo3-stubgen>=0.3.0",
]
dev = [
    "pre-commit>=4.3.0",
    "maturin>=1.0,<2.0",
    "twine>=5.0.0",
    "pytest-order>=1.3.0",
    "skyfield>=1.53",
    "py-spy>=0.3.14",
    { include-group = "test" },
    { include-group = "docs" },
]

[tool.maturin]
# The cdylib that backs `brahe._brahe` lives in the `brahe-py` workspace crate.
# The pure-Rust `brahe` crate at the repo root is published to crates.io and
# builds only an rlib, avoiding an unnecessary cdylib artifact for Rust consumers.
manifest-path = "crates/brahe-py/Cargo.toml"
# We name the rust module with a leading underscore to avoid a name conflict with the python module
# This is a workaround for IDEs to avoid confusion in function naming.
#
# See: https://www.maturin.rs/project_layout#import-rust-as-a-submodule-of-your-project
module-name = "brahe._brahe"
# "extension-module" tells pyo3 we want to build an extension module (skips linking against libpython.so)
features = ["pyo3/extension-module"]
# Include type stub file in distribution
include = [
    "brahe/_brahe.pyi",
    "brahe/py.typed",
    "brahe/plots/data/__init__.py",
    "brahe/plots/data/world.topo.200410.3x5400x2700.png",
]

[tool.pytest.ini_options]
markers = [
    "integration: marks tests that require network access to remote hosts or long runtimes (run with -m integration); tests that only read SPICE kernels are NOT gated — kernels are expected cached (run `just setup`)",
]
# By default, exclude integration tests unless explicitly requested with -m integration
addopts = "-m 'not integration'"
testpaths = [
    "tests",
]
pythonpath = ["."]

[tool.coverage.run]
source = ["brahe"]
omit = [
    "brahe/_brahe.pyi",
    "brahe/plots/*",
]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "if __name__ == .__main__.",
    "if TYPE_CHECKING:",
]
show_missing = true

[tool.ruff.lint]
# Ignore F403 (import * used) in __init__.py for backward compatibility pattern
extend-ignore = ["F403"]
