[package]
name = "brahe-py"
version = "1.4.0"
authors = ["Duncan Eddy <duncan.eddy@gmail.com>"]
edition = "2024"
description = "PyO3 bindings for the brahe astrodynamics library. Built by maturin into the `brahe._brahe` Python extension module; not published to crates.io."
repository = "https://github.com/duncaneddy/brahe/"
license = "MIT"
publish = false

[lib]
# Maturin drives the output filename from pyproject.toml's `module-name`
# ("brahe._brahe"). This Rust lib name just needs to be unique inside the
# workspace and is not used directly by Python.
name = "brahe_py"
crate-type = ["cdylib"]

[dependencies]
brahe = { path = "../..", features = ["python"] }
pyo3 = "0.28.2"
numpy = "0.28.0"
nalgebra = "0.34.1"
rayon = "1.11"
serde_json = "1.0.149"
uuid = { version = "1.20.0", features = ["v4", "v7", "serde"] }
