[package]
name = "brahe-wasm"
version.workspace = true
authors = ["Duncan Eddy <duncan.eddy@gmail.com>"]
edition = "2024"
description = "WASM bindings for the brahe astrodynamics library. Built by wasm-pack into an npm-installable package; not published to crates.io."
repository = "https://github.com/duncaneddy/brahe/"
license = "MIT"
publish = false

[lib]
name = "brahe_wasm"
crate-type = ["cdylib"]

[dependencies]
brahe = { path = "../..", default-features = false, features = ["wasm"] }
wasm-bindgen = "0.2"
