[package]
name = "bench_nyx"
version = "0.1.0"
edition = "2024"

# Standalone crate: the brahe repo root has its own workspace (for
# `crates/brahe-py`), and the sibling `implementations/rust/` benchmark is
# also its own workspace. The empty [workspace] table tells cargo to treat
# this manifest as its own workspace root.
[workspace]

[[bin]]
name = "bench_nyx"
path = "src/main.rs"

[dependencies]
# Pin Nyx, ANISE, and hifitime explicitly.
# nyx-space 2.4.0 (git master) requires anise 0.10.1 and hifitime 4.3.0.
# nyx-space 2.4.0 is not yet published to crates.io; use the git source.
# anise 0.10.1 provides DynamicFrame for IAU precession/nutation frame families.
nyx-space = { git = "https://github.com/nyx-space/nyx", rev = "7bcdd51f2efa014a0a0a3663d1781492afa9fdde" }
anise     = "=0.10.1"
hifitime  = { version = "=4.3.0", features = ["ut1"] }

serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
anyhow = "1.0"
platform-dirs = "0.3"

[profile.release]
opt-level = 3
lto = "thin"
codegen-units = 1
