[package]
name = "bench_comparative"
version = "0.1.0"
edition = "2024"

[[bin]]
name = "bench_comparative"
path = "src/main.rs"

[dependencies]
brahe = { path = "../../../.." }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
nalgebra = "0.34"

[profile.release]
opt-level = 3
lto = "thin"
codegen-units = 1
