[package]
name = "bench_comparative"
version = "0.1.0"
edition = "2024"

# Standalone crate: the brahe repo root has its own workspace
# (for `crates/brahe-py`), and this benchmark lives inside the repo tree
# but is not a workspace member. The empty [workspace] table tells cargo
# to treat this manifest as its own workspace root instead of inheriting
# the repo-root workspace.
[workspace]

[[bin]]
name = "bench_comparative"
path = "src/main.rs"

[dependencies]
brahe = { path = "../../../.." }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
nalgebra = "0.34"
# Match the brahe-py extension's allocator so Python and Rust benchmark
# results are comparable. Without this the Rust bench would use the macOS
# system allocator while brahe-py uses mimalloc, biasing the comparison.
mimalloc = { version = "0.1", default-features = false }

[profile.release]
opt-level = 3
lto = "thin"
codegen-units = 1
