[package]
name = "bench_gpu_rust"
version = "0.1.0"
edition = "2024"

# Standalone crate, not a workspace member of the brahe repo root workspace.
[workspace]

[[bin]]
name = "bench_gpu_rust"
path = "src/main.rs"

[dependencies]
brahe = { path = "../../../.." }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
rayon = "1.10"
nalgebra = "0.34"
mimalloc = { version = "0.1", default-features = false }

[profile.release]
opt-level = 3
lto = "thin"
codegen-units = 1
